--- a/src/day-clinic.html
+++ b/src/day-clinic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS-->
-    <link rel="stylesheet" href="./resources/assets/styles/main.css" />
+    <link rel="stylesheet" href="./resources/css/main.css" />
 
     <!--Font Awesome-->
     <link
@@ -69,7 +69,7 @@
             <div class="dayClinic-right">
               <div class="img-right-dayClinc">
                 <img
-                  src="./resources/assets/img/Restauração-Dentária-day-clinic-Vila-Olímpia.jpg"
+                  src="./resources/img/Restauração-Dentária-day-clinic-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
@@ -87,7 +87,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
                 />
               </div>
@@ -97,7 +97,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Maria-Goreti-Nogueira-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Maria-Goreti-Nogueira-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
                 />
               </div>
@@ -107,7 +107,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
                 />
               </div>
@@ -185,7 +185,7 @@
             </div>
             <div class="icon-logo-footer">
               <img
-                src="./resources/assets/img/Logo-Dentista-Vila-Olímpia.webp"
+                src="./resources/img/Logo-Dentista-Vila-Olímpia.webp"
                 alt="Logo a Clínica Oral - Dentista Vila Olímpia"
                 width="100x"
                 height="100px"
@@ -195,6 +195,6 @@
         </div>
       </footer>
     </main>
-    <script src="./resources/assets/js/main.js"></script>
+    <script src="./resources/js/main.js"></script>
   </body>
 </html>
