--- a/src/equipe.html
+++ b/src/equipe.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS-->
-    <link rel="stylesheet" href="./resources/assets/styles/main.css" />
+    <link rel="stylesheet" href="./resources/css/main.css" />
 
     <!--Font Awesome-->
     <link
@@ -45,7 +45,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
                 />
               </div>
@@ -55,7 +55,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Maria-Goreti-Nogueira-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Maria-Goreti-Nogueira-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
                 />
               </div>
@@ -65,7 +65,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
                 />
               </div>
@@ -77,7 +77,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Caroline Bernardo Dentista Vila Olímpia"
                 />
               </div>
@@ -87,7 +87,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Paloma Valenzuela Dentista Vila Olímpia"
                 />
               </div>
@@ -97,7 +97,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Marina-Ferreira-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Marina-Ferreira-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Mariana Ferreira Dentista Vila Olímpia"
                 />
               </div>
@@ -109,7 +109,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dr-Andre-Sakima-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dr-Andre-Sakima-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dr. André Sakima Dentista Vila Olímpia"
                 />
               </div>
@@ -119,7 +119,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Isabella-Louzada-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Isabella-Louzada-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Isabella Louzada Nogueira Dentista Vila Olímpia"
                 />
               </div>
@@ -129,7 +129,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dra-Denize-Gregorio-Takemura-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Denize-Gregorio-Takemura-Dentista-Vila-Olimpia.webp"
                   alt="Foto da Dra. Denize Gregório Takemura Dentista Vila Olímpia"
                 />
               </div>
@@ -141,7 +141,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/assets/img/curriculo/Dr-Lucas-Sicca-Dentista-Vila-Olímpia.webp"
+                  src="./resources/img/curriculo/Dr-Lucas-Sicca-Dentista-Vila-Olímpia.webp"
                   alt="Foto da Dr. Lucas Sicca Dentista Vila Olímpia"
                 />
               </div>
@@ -171,7 +171,7 @@
             </div>
             <div class="icon-logo-footer">
               <img
-                src="./resources/assets/img/Logo-Dentista-Vila-Olímpia.webp"
+                src="./resources/img/Logo-Dentista-Vila-Olímpia.webp"
                 alt="Logo a Clínica Oral - Dentista Vila Olímpia"
                 width="100x"
                 height="100px"
@@ -181,6 +181,6 @@
         </div>
       </footer>
     </main>
-    <script src="./resources/assets/js/main.js"></script>
+    <script src="./resources/js/main.js"></script>
   </body>
 </html>
