--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS-->
-    <link rel="stylesheet" href="./resources/assets/styles/main.css" />
+    <link rel="stylesheet" href="./resources/css/main.css" />
 
     <!--Font Awesome-->
     <link
@@ -56,7 +56,7 @@
             </div>
             <div class="icon-logo-footer">
               <img
-                src="./resources/assets/img/Logo-Dentista-Vila-Olímpia.webp"
+                src="./resources/img/Logo-Dentista-Vila-Olímpia.webp"
                 alt="Logo a Clínica Oral - Dentista Vila Olímpia"
                 width="100x"
                 height="100px"
@@ -66,6 +66,6 @@
         </div>
       </footer>
     </main>
-    <script src="./resources/assets/js/main.js"></script>
+    <script src="./resources/js/main.js"></script>
   </body>
 </html>
