--- a/src/ortodontia.html
+++ b/src/ortodontia.html
@@ -44,32 +44,103 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>Day Clinic</h2>
+                <h2>Ortodontia</h2>
                 <p>
-                  Quando falamos em Day Clinic estamos nos referindo ao
-                  tratamento odontológico proporcionando economia de tempo ao
-                  reduzir as várias visitas semanais ao consultório para um
-                  menor número de consultas possível. Para isso é feito um
-                  planejamento para a realização de um número maior de
-                  procedimentos em um único dia, otimizando o resultado em um
-                  menor tempo de tratamento, permitindo que pacientes com
-                  escassez de tempo possam realizar o tratamento de forma mais
-                  rápida sem perder em qualidade e segurança do resultado.
+                  Hoje em dia há um número crescente de adultos usando aparelhos
+                  ortodônticos, até mesmo celebridades passaram a usá-los,
+                  influenciando a forma de pensar das pessoas. Contudo é preciso
+                  saber que atualmente existem aparelhos que não chamam tanto a
+                  atenção como o metálico o que incentiva um número cada vez
+                  maior de pacientes na adesão ao tratamento.
                 </p>
-                <p>
-                  Possuímos toda a infra-estrutura e equipe integrada para
-                  realizar o Day Clinic com todo o conforto para você sem nenhum
-                  custo adicional. É imprescindível agendar uma Primeira
-                  Consulta para saber se o tratamento que você necessita pode
-                  ser realizado no sistema Day Clinic.
-                </p>
-                <a href="">Agende sua consulta</a>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Restauração-Dentária-day-clinic-Vila-Olímpia.jpg"
+                  src="./resources/img/Ortodontia-Vila-Olímpia.jpg"
+                  alt=""
+                  width="1000"
+                  height="667"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-tratamento-base">
+        <div class="container">
+          <div class="info-tratamento-base invisalign-left">
+            <div class="tratamento-base-left">
+              <div class="content-tratamentoBase-left">
+                <h2>Invisalign</h2>
+                <p>
+                  Sucesso no mundo inteiro, os alinhadores Invisalign são
+                  aparelhos ortodônticos transparentes em formato de placas, ou
+                  seja, não possuem braquetes e fios metálicos como nos
+                  aparelhos ortodônticos convencionais. Com um visual discreto,
+                  ao ponto de quase ninguém perceber que você está em
+                  tratamento, por serem praticamente invisíveis. Por ser um
+                  aparelho removível, tem a vantagem de poder remover antes das
+                  refeições e na hora da higienização. Não atrapalham na fala.
+                  Não causam irritação. O tempo de consulta para ativação do
+                  aparelho é reduzido em relação ao aparelho convencional.
+                </p>
+              </div>
+            </div>
+            <div class="tratamentoBase-right">
+              <div class="img-right-tratamentoBase">
+                <img
+                  src="./resources/img/Invisalign-Vila-Olímpia.jpg"
+                  alt=""
+                  width="1000"
+                  height="667"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-tratamento-base">
+        <div class="container">
+          <div class="info-tratamento-base">
+            <div class="tratamento-base-left">
+              <div class="content-tratamentoBase-left">
+                <h2>Aparelhos Auto-Ligados</h2>
+                <p>
+                  É uma evolução do aparelho convencional, com algumas
+                  vantagens:
+                </p>
+                <ul>
+                  <li>Mais higiênico, acumula menos placa bacteriana;</li>
+                  <li>minimiza a necessidade de extrações dentárias;</li>
+                  <li>
+                    material de alta tecnologia, a força é ativada pela
+                    temperatura da boca;
+                  </li>
+                  <li>
+                    as manutenções são feitas a cada 2 meses, sem prolongar o
+                    tempo do tratamento;
+                  </li>
+                  <li>
+                    correção mais rápida quando comparado aos aparelhos fixos
+                    convencionais;
+                  </li>
+                  <li>diminuição da dor durante o tratamento;</li>
+                  <li>diminuição do número de visitas ao dentista;</li>
+                  <li>
+                    redução significativa da força exigida para movimentação
+                    dentária.
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="tratamentoBase-right">
+              <div class="img-right-tratamentoBase">
+                <img
+                  src="./resources/img/Aparelhos-Auto-Ligados-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
