base das paginas

--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -44,81 +44,58 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
+                <h2>Cirurgia Ortognática</h2>
                 <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
+                  É um tratamento indicado para pessoas que têm deformidades
+                  envolvendo os ossos da face e os dentes, visando restabelecer
+                  o equilíbrio anatômico da face. Quando não for possível
+                  resolver o caso somente com o aparelho ortodôntico, uma vez
+                  que o problema está no tamanho dos ossos do esqueleto e não
+                  somente na posição dos dentes, faz-se necessário uma correção
+                  óssea.
                 </p>
-                <a href="" class="btn">Agendar Consulta</a>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
                 <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
+                  As deformidades dos ossos da face podem se originar de
+                  distúrbios de crescimento, síndromes e anomalias específicas,
+                  traumas na face, ou serem de origem genética, dentre outros
+                  fatores. Essas alterações podem estar localizadas num osso,
+                  como no prognatismo mandibular (mandíbula grande) ou no
+                  retrognatismo mandibular (mandíbula pequena), ou muitas vezes
+                  uma combinação dos dois. O paciente deverá realizar uma
+                  documentação ortodôntica completa para que os profissionais
+                  (Cirurgião Buco Maxilo Facial e Ortodontista) analisem as
+                  correções necessárias através de um tratamento
+                  ortodôntico-cirúrgico-ortodôntico. Isto é, inicia-se com a
+                  ortodontia preparando os dentes por período que varia de seis
+                  meses a um ano e meio (primeira etapa), a partir daí
+                  planeja-se a cirurgia ortognática, fazendo uma moldagem de
+                  estudo e confeccionando modelos de gesso e montagem em
+                  articulador; opera-se o paciente e, logo que se recupere, a
+                  ortodontia realizará os últimos ajustes na oclusão.
                 </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
                 <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
+                  Antes da cirurgia, o paciente deverá realizar alguns exames
+                  complementares. A cirurgia é realizada em ambiente hospitalar
+                  e sob anestesia geral, envolvendo normalmente dois cirurgiões,
+                  um instrumentador e uma equipe multidisciplinar. A cirurgia é
+                  realizada totalmente por dentro da boca, não deixando cicatriz
+                  na face e, dependendo do porte da cirurgia e recuperação da
+                  anestesia, a alta hospitalar é dada ao paciente na manhã do
+                  dia seguinte. A correção das deformidades faciais através da
+                  cirurgia ortognática traz grandes benefícios aos pacientes
+                  operados, com sensível melhora na relação entre os dentes,
+                  músculos, ossos, respiração, fonação, posição da língua,
+                  articulação temporo-mandibular (ATM), mastigação, digestão e
+                  em muitos casos, no relacionamento social. A Cirurgia
+                  Ortognática moderna busca um equilíbrio das funções
+                  mastigatória, respiratória e da beleza estética.
                 </p>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                  src="./resources/img/Restauração-Dentária-Vila-Olímpia (1).jpg"
                   alt=""
                   width="1000"
                   height="667"
