--- a/src/implante-dentario.html
+++ b/src/implante-dentario.html
@@ -44,81 +44,34 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
+                <h2>Implante Dentário</h2>
                 <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
+                  O implante dentário representa uma mudança de vida do
+                  paciente, que recupera sua saúde bucal e sua auto-estima.
+                  Talvez o procedimento de odontologia estética de aparência
+                  mais natural e permanente de todos, os implantes dentários são
+                  confortáveis, praticamente indistinguíveis dos dentes
+                  naturais. Eles consistem de um pino de titânio que é inserido
+                  no osso, substituindo a raiz do dente, e uma coroa de
+                  porcelana, que está ligado ao implante.
                 </p>
-                <a href="" class="btn">Agendar Consulta</a>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
                 <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
+                  O implante pode recuperar a função dos dentes e a beleza do
+                  sorriso: preenchendo espaços de dentes ausentes, substituindo
+                  próteses removíveis e fixas, quando estas por algum motivo não
+                  agradam o paciente, melhorar a qualidade da mastigação e
+                  diminuir a reabsorção óssea. Quando a pessoa perde um ou mais
+                  dentes, esse osso perde sua função e é reabsorvido pelo
+                  organismo. Ocorrendo a reabsorção, as consequências estéticas
+                  e funcionais debilitam progressivamente a mastigação e a
+                  arcada dentária.
                 </p>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
-                <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                  src="./resources/img/Implante-Dentário-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
