--- a/src/dentes-do-siso.html
+++ b/src/dentes-do-siso.html
@@ -44,81 +44,33 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
+                <h2>Dentes do Siso</h2>
                 <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
-                </p>
-                <a href="" class="btn">Agendar Consulta</a>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
-                <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
+                  Esse dente geralmente irrompe na boca no final da adolescência
+                  ou próximo aos vinte anos, e na maioria das vezes, eles estão
+                  mal posicionados e precisam ser removidos. A posição e o
+                  ângulo desfavoráveis para a sua erupção podem causar danos aos
+                  dentes adjacentes, ao osso, e aos nervos localizados próximos
+                  a ele. Os dentes do siso também podem estar impactados. Dentes
+                  impactados não irrompem ou irrompem parcialmente na boca
+                  devido ao seu tamanho e ausência de espaço adequando para a
+                  sua acomodação. A erupção parcial dos dentes do siso permite
+                  uma abertura para a entrada de bactérias ao seu redor, o que
+                  pode causar uma infecção que resultará em dor, inchaço e
+                  dificuldade de abertura e fechamento da boca. Além de serem
+                  mais propensos ao aparecimento de cáries e desenvolvimento de
+                  doenças da gengiva devido à sua localização de difícil acesso
+                  da escova e do fio dental, dificultando a higienização. É
+                  recomendado que os dentes do siso sejam extraídos antes mesmo
+                  de desenvolverem qualquer tipo de problema. Dessa forma
+                  pode-se evitar extrações dolorosas e complicadas.
                 </p>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
-                <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                  src="./resources/img/Dentes-do-Siso-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
