--- a/src/odontologia-pre-natal.html
+++ b/src/odontologia-pre-natal.html
@@ -44,81 +44,55 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
+                <h2>Odontologia Pré-Natal</h2>
                 <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
+                  É fato que a saúde começa pela boca, e por saber que a
+                  gravidez provoca uma série de alterações no organismo da
+                  mulher, inclusive na cavidade bucal, é que se justifica a
+                  importância do acompanhamento do dentista durante a gestação.
+                  O pré-natal odontológico traz como principal objetivo cuidar e
+                  educar a gestante para ter um bebê saudável, incluindo ações
+                  como a desmistificar crenças e preocupações sobre a gravidez e
+                  o tratamento dentário, conscientizar sobre os principais
+                  problemas bucais, orientar sobre a importância do controle de
+                  placa, uso do flúor, amamentação, cuidados com o futuro bebê,
+                  bem como a importância da alimentação equilibrada, uma vez que
+                  os dentes necessitam de minerais e começam a se formar a
+                  partir da 6ª semana de gravidez.
                 </p>
-                <a href="" class="btn">Agendar Consulta</a>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
                 <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
+                  Durante a gravidez o cuidado deve ser redobrado, já que a
+                  futura mãe têm grande propensão a desenvolver doenças bucais.
+                  A incidência de gengivite é mais comum do se imagina. Por
+                  conta das modificações fisiológicas no corpo da grávida, pelo
+                  menos 60 a 70% podem apresentar gengivite ao longo dos nove
+                  meses, já que as alterações hormonais facilitam o
+                  desenvolvimento de inflamação. Além disso as mulheres também
+                  vomitam mais nessa fase e a saliva pode acabar ficando mais
+                  ácida, com o pH mais baixo pode criar um ambiente propício
+                  para o desenvolvimento mais rápido de cáries.
                 </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
                 <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
+                  É preciso ficar claro que não há nenhuma contraindicação para
+                  anestesia ou radiografia ao longo da gestação. Há, inclusive,
+                  anestésicos próprios para grávidas. No caso das radiografias,
+                  o colete de chumbo deve ser posicionado também na barriga,
+                  para proteger o bebê. Não tratar é mais arriscado do que o
+                  tratamento. Principalmente por que as mulheres com dor, que
+                  evitam o dentista, costumam se automedicar, o que pode levar à
+                  ingestão de um medicamento prejudicial ao feto. E tem mais, as
+                  mães com cáries correm um sério risco de passar as bactérias
+                  causadoras do problema ao bebê, já que a cárie é uma doença
+                  transmissível que pode sair da boca da mãe para a da criança,
+                  principalmente quando ela sopra ou prova a comida antes de dar
+                  para o filho.
                 </p>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                  src="./resources/img/Odontologia-Pré-Natal-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
