--- a/src/odontopediatria.html
+++ b/src/odontopediatria.html
@@ -44,81 +44,40 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
+                <h2>Odontopediatria</h2>
                 <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
+                  É a especialidade que visa orientar os pais sobre todos os
+                  aspectos relacionados à parte odontológica do bebê e da
+                  criança.
                 </p>
-                <a href="" class="btn">Agendar Consulta</a>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
                 <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
+                  A odontologia do novo século está baseada na prevenção, isto
+                  é, o tratamento odontológico inicia-se através de orientações
+                  à mamãe gestante. Alertamos sobre a importância de sua saúde e
+                  dieta durante a gravidez, visto que os dentinhos de leite se
+                  formam durante a vida intra-uterina. E da posição adequada de
+                  amamentação, pois esta interfere diretamente na respiração e
+                  deglutição, alterando todo o desenvolvimento da face. Após o
+                  nascimento do bebê a higienização da cavidade oral é
+                  fundamental mesmo sem os dentinhos!
+                </p>
+                <p>
+                  Orientações em relação À dieta, hábitos (chupeta, mamadeira),
+                  tipo de escova e pasta dental adequadas fazem da
+                  Odontopediatria uma especialidade responsável em promover
+                  hábitos saudáveis, resultando em um sorriso harmônico e livre
+                  de cáries hoje e sempre ! Nossa preocupação é preparar a
+                  criança para receber o tratamento através do condicionamento
+                  psicológico, onde a criança brinca com todos os aparelhos para
+                  que tudo lhe seja familiar, tornando assim, a consulta
+                  prazerosa.
                 </p>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
-                <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                  src="./resources/img/Odontopediatria-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
