--- a/src/restauracao-dentaria.html
+++ b/src/restauracao-dentaria.html
@@ -44,81 +44,21 @@
           <div class="info-tratamento-base">
             <div class="tratamento-base-left">
               <div class="content-tratamentoBase-left">
-                <h2>A Clínica Oral</h2>
+                <h2>Restauração Dentária</h2>
                 <p>
-                  Somos uma Clínica Odontológica com o objetivo de no mesmo
-                  espaço integrar todas as especialidades, proporcionando um
-                  plano de tratamento mais completo e personalizado. Contando
-                  com uma equipe de profissionais graduados e pós-graduados pela
-                  USP e outros Centros de Excelência buscamos constantemente
-                  trazer para nossos pacientes o que a de melhor e mais moderno
-                  na odontologia.
-                </p>
-                <a href="" class="btn">Agendar Consulta</a>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Equipamentos de Última Geração</h2>
-                <p>
-                  Investimos constantemente em tecnologia e aparelhos de última
-                  geração, como sensores digitais de raio-X, câmeras intra-orais
-                  para fotografias digitais, laser, softwares de imagens para
-                  sempre oferecer o melhor serviço para nossos pacientes.
+                  Antes das resinas o único material restaurador para dentes
+                  posteriores era o amálgama (prateado), que apesar de
+                  apresentar grande resistência e durabilidade, deixava a
+                  desejar pela falta de estética. Hoje com a grande evolução das
+                  resinas, temos materiais restauradores estéticos com qualidade
+                  e durabilidade satisfatórias.
                 </p>
               </div>
             </div>
             <div class="tratamentoBase-right">
               <div class="img-right-tratamentoBase">
                 <img
-                  src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="s-tratamento-base">
-        <div class="container">
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left">
-              <div class="content-tratamentoBase-left">
-                <h2>Espaço Aconchegante</h2>
-                <p>
-                  Criamos um espaço aconchegante para seu conforto, climatizado
-                  e com rede wireless. Contando ainda com iPads disponíveis para
-                  você agilizar seus compromissos ou simplesmente navegar em
-                  seus sites prediletos. Todas as salas são equipadas com TVs e
-                  fones sem fio, travesseiros e cobertores para conforto do
-                  paciente durante o atendimento.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
+                  src="./resources/img/Restauração-Dentária-Vila-Olímpia.jpg"
                   alt=""
                   width="1000"
                   height="667"
