--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,9 @@
                   trazer para nossos pacientes o que a de melhor e mais moderno
                   na odontologia.
                 </p>
-                <a href="" class="btn">Agendar Consulta</a>
+                <a href="" class="agendarIndex" style="color: #fff"
+                  >Agendar Consulta</a
+                >
               </div>
             </div>
             <div class="tratamentoBase-right">
