base header e banner

--- a/src/header.html
+++ b/src/header.html
@@ -81,6 +81,40 @@
         </nav>
       </header>
 
+      <section class="s-banner">
+        <div class="imgBanner">
+          <img src="./resources/img/background-index-new-3.png" alt="" />
+        </div>
+        <div class="container">
+          <div class="msgBanner">
+            <img
+              src="./resources/img/Logo-Dentista-Vila-Olímpia.webp"
+              alt=""
+              width="150"
+              height="150"
+            />
+            <div>
+              <h1>Conforto e sofisticação para você e seu sorriso</h1>
+              <h3>Dentista Vila Olímpia</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-itens-menu">
+        <div class="container">
+          <div class="itens-index">
+            <p class="box-iten-index">Ortodontia</p>
+            <p class="box-iten-index">Clareamento Dental</p>
+            <p class="box-iten-index">Dentes do Siso</p>
+            <p class="box-iten-index">Lente de Contato Dental</p>
+          </div>
+          <div class="iten-tratamento">
+            <a href="">Todos os Tratamentos</a>
+          </div>
+        </div>
+      </section>
+
       <section class="s-tratamento-base">
         <div class="container">
           <div class="info-tratamento-base">
