--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./resources/css/main.css" />
+    <link rel="stylesheet" href="./resources/sass/header.css" />
 
     <!--Font Awesome-->
     <link
@@ -43,7 +44,7 @@
           <ul>
             <li><a href="">Início</a></li>
             <li class="dropdown">
-              <a href="">Tratamentos</a>
+              <a href="" class="dropdown-toggle">Tratamentos</a>
               <ul class="dropdown-menu">
                 <li class="submenu">
                   <a href="">Estética</a>
