--- a/src/lente-de-contato-dental.html
+++ b/src/lente-de-contato-dental.html
@@ -7,6 +7,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./resources/css/main.css" />
+    <link rel="stylesheet" href="./resources/sass/header.css" />
 
     <!--Font Awesome-->
     <link
